# interpolator

./: README.md  pyproject.toml
src/interpolate/: data_exporter.py  data_ingestor.py  interpolator.py  main.py
tests/: test_data_exporter.py  test_data_ingestor.py  test_interpolator.py
